<resources>
    <string name="app_name">XO</string>
    <string name="author">Aditya Bhardwaj</string>
    <string name="tic">TIC</string>
    <string name="tac">TAC</string>
    <string name="toe">TOE</string>
    <string name="player_o">O</string>
    <string name="player_x">X</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="select_difficulty">Select\nDifficulty</string>
    <string name="easy_bot">Easy Bot</string>
    <string name="medium_bot">Medium Bot</string>
    <string name="hard_bot">Hard Bot</string>
    <string name="turn_pointer">↑</string>
    <string name="you_win">You Win!!!</string>
    <string name="you_lose">You Lose!!!</string>
    <string name="its_a_draw">It\'s a Draw</string>
    <string name="player_1_wins">Player 1 Wins</string>
    <string name="player_2_wins">Player 2 Wins</string>

    <!-- Actual -->
    <string name="app_id">ca-app-pub-5040281513434473~4595459166</string>
    <string name="main_banner_id">ca-app-pub-5040281513434473/4986642726</string>
    <string name="rewarded_id">ca-app-pub-5040281513434473/7087204212</string>
    <string name="game_banner_id">ca-app-pub-5040281513434473/1470069544</string>

    <!-- For Testing Purpose -->
<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="main_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="rewarded_id">ca-app-pub-3940256099942544/5224354917</string>-->
<!--    <string name="game_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->

</resources>